--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-habit-tracker-api",
+  "name": "easy-crud-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
